--- a/src/app/pages/biographie/biographie.component.scss
+++ b/src/app/pages/biographie/biographie.component.scss
@@ -7,7 +7,6 @@
     flex-direction: column;
     position: fixed;
     right: 25px;
-
     a {
       color: #000;
       font-weight: bold;
@@ -33,14 +32,11 @@
     margin: auto 300px auto auto;
 
     h3 {
-      font-size: 1.5em;
-      font-weight: bold;
       margin: 20px 0;
+      font-size: 1.5em;
       transition: transform 0.5s ease-in-out;
-
-      &:hover {
-        transform: translateY(10px);
-      }
+      font-weight: bold;
+      padding-top: 40px;
     }
   }
 
