--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
   <div class="app">
-  <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <app-navbar class="navbar"></app-navbar>
+    <router-outlet class="body"></router-outlet>
+  <app-footer class="footer"></app-footer>
 </div>
