--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,11 +38,12 @@ $PatrickLaumond-theme: mat.define-light-theme((
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-html, body, header, main {
+html, body, main {
   scroll-behavior: smooth;
   font-family: 'Lato', sans-serif;
-  height: 100%;
-  margin: 0;
-}
-
+    min-height: 100vh; 
+    margin: 0;  
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+  }
 
