--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,12 +38,10 @@ $PatrickLaumond-theme: mat.define-light-theme((
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-html, body, main {
+html, body, header, main {
   scroll-behavior: smooth;
   font-family: 'Lato', sans-serif;
-    min-height: 100vh; 
-    margin: 0;  
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-  }
+  height: 100%;
+  margin: 0;
+}
 
