--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,7 +3,8 @@
 @import "~primeng/resources/primeng.min.css";
 
 :host ::ng-deep .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link{
-    border-radius: 0px;
+    border-radius: 0px;   
+    box-shadow: inset 0 0 0 0.2rem #e6686800;
 }
 
 :host ::ng-deep .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text{
