--- a/src/app/pages/analyses/analyses.component.scss
+++ b/src/app/pages/analyses/analyses.component.scss
@@ -1,4 +1,30 @@
+:host ::ng-deep .p-tabview .p-tabview-nav li .p-tabview-title {
+    color: #525252; /* Couleur du texte */
+  }
+  
+  :host ::ng-deep .p-tabview .p-tabview-nav li.p-highlight .p-tabview-title {
+    color: #cc0000; /* Couleur de sélection */
+  }
+  
+  :host ::ng-deep .p-tabview .p-tabview-nav li.p-highlight::after {
+    color: #cc0000; /* Couleur de la barre de sélection */
+  }
+
+  :host ::ng-deep .p-tabview .p-tabview-nav li.p-highlight > a {
+    border-color: #cc0000; /* Couleur du contour */
+  }
+  
+  :host ::ng-deep .p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
+    outline: 0 none;
+    outline-offset: 0;
+    box-shadow: inset 0 0 0 0.2rem #e668685c;
+    border-radius: 0px;
+  }
+  
+  
+
 .text-container {
+      
     width: 90%; /* largeur de la zone de texte */
     margin: auto; /* centrage horizontal */
     font-size: 1.2em; /* taille de police */
@@ -15,12 +41,6 @@
       font-style: normal;
       font-weight: bold;
     }
-    
-    // @media screen and (max-width: 768px) {
-    //  .h2{
-    //    font-size: 1em;
-    //  }
-        
-    // }
+
   }
   
