🐛 fix text spaces

--- a/src/app/pages/metahisme/metahisme.component.html
+++ b/src/app/pages/metahisme/metahisme.component.html
@@ -29,7 +29,7 @@
     <p>{{ 'MétaHisme.Texte13' | translate }}<br>
     <a id="Edith"> {{ 'MétaHisme.Texte14' | translate }}</a>
   </p>
-  <p id="ps">{{ 'MétaHisme.Texte15' | translate }}</p>
+  <p id="ps">{{ 'MétaHisme.Texte15' | translate }}</p><br>
   <p>{{ 'MétaHisme.Texte16' | translate }}</p>
 </div>
 
