--- a/src/app/pages/metahisme/metahisme.component.scss
+++ b/src/app/pages/metahisme/metahisme.component.scss
@@ -1,15 +1,27 @@
 .text-container {
   width: 90%; /* largeur de la zone de texte */
   margin: auto; /* centrage horizontal */
+
   font-size: 1.2em; /* taille de police */
   line-height: 1.5em; /* hauteur de ligne */
-  text-align: justify; /* alignement justifié */
   padding: 0px; /* espacement intérieur */
+
+  h1{
+    -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  }
 
   p{
     margin: 1.2em 0;
     padding: 0;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
   }
+
 
   #ps{
     color: #999999;
