--- a/src/app/pages/biographie/biographie.component.scss
+++ b/src/app/pages/biographie/biographie.component.scss
@@ -27,7 +27,6 @@
     font-size: 1.2em;
     line-height: 1.5em;
     padding: 20px;
-    text-align: justify;
     width: 80%;
     margin: auto 300px auto auto;
 
@@ -45,7 +44,7 @@
 
     .nav-menu {
       position: static;
-      display: block;
+      display: none;
       margin-bottom: 20px;
     }
 
