--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-  <div class="app">
-  <app-navbar ></app-navbar>
+  <div class="app">    
+    <app-navbar ></app-navbar>
     <router-outlet ></router-outlet>
-  <app-footer ></app-footer>
+    <footer class="footer">
+    <app-footer ></app-footer>
+  </footer>
 </div>
