--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,10 @@
 .footer {
     background-color: #f5f5f5;
     padding: 20px 0;
+    width: 100%;
     text-align: center;
-}
+    margin-top: auto;
+    }
 
 .container {
     max-width: 960px;
