--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,8 @@ $PatrickLaumond-theme: mat.define-light-theme((
 html, body, header, main {
   scroll-behavior: smooth;
   font-family: 'Lato', sans-serif;
-  height: 100%;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
