--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,11 @@
 <p-menubar [model]="translatedItems" *ngIf="!isMobile || visibleSidebar">
-      <ng-template pTemplate="start">
-      <a class="Laumond" routerLink="">
-        Patrick Laumond
-      </a>
-    </ng-template>
+    
     <ng-template pTemplate="items" let-item>
       <a [routerLink]="item.routerLink">{{ 'navbar.' + item.label | translate }}</a>
     </ng-template>
     <ng-template pTemplate="end">
       <button (click)="switchLanguage()">
-        <img *ngIf="currentLang === 'fr'" src="assets/usaFlag.png" alt="EN">
+        <img *ngIf="currentLang === 'fr'" src="assets/enFlag.png" alt="EN">
         <img *ngIf="currentLang === 'en'" src="assets/franceFlag.png" alt="FR">
       </button>
     </ng-template>
@@ -21,12 +17,10 @@
         <a [routerLink]="item.routerLink">{{ item.label }}</a>
       </li>
     </ul>
-    <a class="Laumond" routerLink="">
-      Patrick Laumond
-    </a>
+
     <ng-template pTemplate="end">
       <button (click)="switchLanguage()">
-        <img *ngIf="currentLang == 'fr'" src="assets/usaFlag.png" alt="EN">
+        <img *ngIf="currentLang == 'fr'" src="assets/enFlag.png" alt="EN">
         <img *ngIf="currentLang == 'en'" src="assets/franceFlag.png" alt="FR">
       </button>
     </ng-template>
