--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <ng-template pTemplate="end">
       <button (click)="switchLanguage()">
         <img *ngIf="currentLang === 'fr'" src="assets/enFlag.png" alt="EN">
-        <img *ngIf="currentLang === 'en'" src="assets/franceFlag.png" alt="FR">
+        <img *ngIf="currentLang === 'en'" src="assets/frFlag.png" alt="FR">
       </button>
     </ng-template>
   </p-menubar>
@@ -21,7 +21,7 @@
     <ng-template pTemplate="end">
       <button (click)="switchLanguage()">
         <img *ngIf="currentLang == 'fr'" src="assets/enFlag.png" alt="EN">
-        <img *ngIf="currentLang == 'en'" src="assets/franceFlag.png" alt="FR">
+        <img *ngIf="currentLang == 'en'" src="assets/frFlag.png" alt="FR">
       </button>
     </ng-template>
   </p-sidebar>
