💄 add pictures analyses

--- a/src/app/components/deployments/deployments.component.html
+++ b/src/app/components/deployments/deployments.component.html
@@ -18,5 +18,6 @@
     <div class="modal-content">
       <img class="modal-image" [src]="currentImageIndex !== null ? imageUrls[currentImageIndex] : ''" [alt]="currentImageIndex !== null ? titles[imageUrls[currentImageIndex]] : ''" />
     </div>
-  </div></div>
+  </div>
+
 
