--- a/src/app/pages/biographie/biographie.component.html
+++ b/src/app/pages/biographie/biographie.component.html
@@ -70,3 +70,5 @@ Il est invité à exposer dans sa ville d'enfance de Saint-Viance, une œuvre im
 
   </div>
 </div>
+<app-button-up-page></app-button-up-page>
+
