--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
   <div class="app">    
     <app-navbar ></app-navbar>
     <router-outlet ></router-outlet>
+    <app-button-up-page></app-button-up-page>
+
     <footer class="footer">
     <app-footer ></app-footer>
   </footer>
+
 </div>
