--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,8 +35,11 @@ $PatrickLaumond-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+
+@import "~primeicons/primeicons.css";
+@import "~primeng/resources/primeng.min.css";
+@import "~primeng/resources/themes/saga-blue/theme.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 html, body, header, main {
   scroll-behavior: smooth;
