--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,18 +1,16 @@
 <footer class="footer">
     <div class="container">
       <p class="footer-text">
-        &copy; Patrick Laumond • Tous droits réservés - patrick@laumond.com - Paris.
+        &copy; Patrick Laumond • Tous droits réservés - patrick@laumond.com - Paris. &nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp; Photos: &copy; Philippe Tapissier
       </p>
-      <div class="social-links">
-        <a href="https://www.facebook.com/metahisme/?locale=fr_FR" target="_blank" rel="noopener noreferrer" class="social-link">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href=" https://www.instagram.com/metahisme/" target="_blank" rel="noopener noreferrer" class="social-link">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://laumond.tumblr.com/" target="_blank" rel="noopener noreferrer" class="social-link">
-          <i class="fab fa-tumblr"></i>
-        </a>
-      </div>
-    </div>
+      <a href="https://www.facebook.com/metahisme/?locale=fr_FR" target="_blank" rel="noopener noreferrer" class="social-link">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href=" https://www.instagram.com/metahisme/" target="_blank" rel="noopener noreferrer" class="social-link">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://laumond.tumblr.com/" target="_blank" rel="noopener noreferrer" class="social-link">
+        <i class="fab fa-tumblr"></i>
+      </a>
+          </div>
   </footer>
