✅ add icon  and name  url

--- a/src/app/pages/analyses/analyses.component.html
+++ b/src/app/pages/analyses/analyses.component.html
@@ -13,7 +13,7 @@
                     </div>
                 </div>
                 <h3 class="titre">
-                    Concordance Universelle - 2022
+                  Concordance Universelle - ECC Italie - Biennale de Venise 2021
                 </h3>
 
                 <div class="content-container">
