💄 remove view suggestions

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,6 @@
 <div class="vr360">
-<iframe class="video" src="https://tm3.co/Y2xddo" allowfullscreen></iframe>
+  <div class="iframe-container">
+    <iframe class="video" src="https://tm3.co/Y2xddo" allowfullscreen></iframe>
+  </div>
   <h3 class="titre">Le mobile d’ouverture des univers parallèles, 2022 - Œuvre interactive 360°</h3>
 </div>
-
-
-
