--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,14 +1,23 @@
-
 .vr360{
   display: flex;
   flex-direction: column;
-    .video{
-      width: 100%;
-      height: 80vh;
-    }
-  
-  .titre{
-    margin-top: 30px;
-  }
 }
 
+.iframe-container {
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.video {
+  position: absolute;
+  bottom: -150px; // Ajuste cette valeur jusqu'à ce que la barre soit hors de vue
+  left: 0;
+  width: 100%;
+  height: calc(100% + 150px); // Assure-toi que cela correspond à la valeur négative ci-dessus
+}
+
+.titre {
+  margin-top: 30px;
+}
