--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -75,76 +75,37 @@ top: 0;
   
 }
 
-p-sidebar {
-  ul {
-    list-style-type: none;
-    padding: 0;
-    font-size: 16px; // base size for mobile
 
-    @media screen and (min-width: 768px) {
-      font-size: 24px; // larger size for tablets and above
-    }
 
-    li {
-      margin-bottom: 20px;
-
-      a {
-        color: #000;
-        text-decoration: none;
-      }
-
-      &:hover a {
-        color: #8B0000;
-      }
-    }
+:host ::ng-deep .your-class-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0px;
+  box-shadow: none;
+  background-color: #ffffff;
+  border: none;
+  color: #525252;
+  text-decoration: none;
+  font-size: 24px;
+  transition: color 0.2s ease-in-out, opacity 0.5s ease-in-out;
+  
+  &:hover,
+  &:active,
+  &:target,
+  &:focus {
+    background-color: #cc000000 !important; // Votre couleur rouge
+    outline: none;
+    box-shadow: none !important;
+    color: #8B0000;
   }
-  img{
-    margin-top: 10px;
-    width: 25px;
-    height: 20px;
+
+  &.show {
+    opacity: 1;
   }
 }
 
-
-// Mobile Menu Button
-button {
+.flags{
   background-color: transparent;
-  border: none !important;
-  cursor: pointer;
-  outline: none; // Ajout pour supprimer le contour bleu
-  padding: 10px;
-
-
-
-  &.custom-menu-button {
-    background-color: transparent !important;
-    color: #cc0000 !important;
-  }
-
-  &.rotated {
-    transform: rotate(90deg);
-    transition: transform 0.2s ease-in-out;
-  }
-
-  button.navbar-button {
-    background-color: transparent !important;
-    border: none !important;
-    outline: none !important;
-  
-    &:hover,
-    &:active,
-    &:focus {
-      background-color: transparent !important;
-      outline: none !important;
-      border: none !important;
-    }
-  }
-  
-  i.pi.pi-bars {
-    color: rgba(0, 0, 0, 0) !important; // remplacer par la couleur de votre choix
-
-  }
-  @media screen and (min-width: 768px) {
-    font-size: 32px;  
-  }
+  border: none;
 }
