--- a/src/app/pages/analyses/analyses.component.html
+++ b/src/app/pages/analyses/analyses.component.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <h3 class="titre">
-              Le mobile d'ouverture des univers parallèles, 2023.
+              Le Mobile D'Ouverture Des Univers Parallèles, 2023.
             </h3>
           </div>
             <div class="text-container">
