--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -13,8 +13,9 @@
 
 .footer-text {
     display: flex;
-    font-size: 0.8em;
-    justify-content: center;
+    font-size: 0.9em;
+    justify-content: justify;
+    text-align: center;
     margin-bottom: 10px;
 }
 
