🐛 center text footer and add config apache

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -14,7 +14,7 @@
 .footer-text {
     display: flex;
     font-size: 0.9em;
-    justify-content: justify;
+    justify-content: center;
     text-align: center;
     margin-bottom: 10px;
 }
