--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,9 @@
 <footer class="footer">
     <div class="container">
       <p class="footer-text">
-        &copy; Patrick Laumond • Tous droits réservés - patrick@laumond.com - Paris. &nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp; Photos: &copy;Philippe Tapissier &nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp; Développement: Paul Convert
+        &copy; Patrick Laumond • Tous droits réservés - patrick@laumond.com - Paris.
       </p>
+      <p class="footer-text">Photos: &copy;Philippe Tapissier &nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp; Développement: Paul Convert</p>
       <a href="https://www.facebook.com/metahisme/?locale=fr_FR" target="_blank" rel="noopener noreferrer" class="social-link">
         <i class="fab fa-facebook-f"></i>
       </a>
