Add link home button

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,5 +2,5 @@
   <div class="iframe-container">
     <iframe class="video" src="https://tm3.co/Y2xddo" allowfullscreen></iframe>
   </div>
-  <h3 class="titre">Le mobile d’ouverture des univers parallèles, 2022 - Œuvre interactive 360°</h3>
+  <h3 class="titre"><a routerLink="analyses">Le mobile d’ouverture des univers parallèles, 2022 - Œuvre interactive 360°</a></h3>
 </div>
