--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -21,3 +21,19 @@
 .titre {
   margin-top: 30px;
 }
+:hover {
+  color:  #cc0000;
+}
+a {
+  color: #525252;
+  text-decoration: none;
+   :hover {
+      text-decoration: underline #cc0000;
+  }
+  h2 {
+      margin-left: 3%;
+      color: #525252;
+      font-size: 1.2em;
+      font-weight: bold;
+  }
+}
