--- a/src/app/pages/metahisme/metahisme.component.scss
+++ b/src/app/pages/metahisme/metahisme.component.scss
@@ -14,7 +14,9 @@
 
   p{
     margin: 1.2em 0;
-    padding: 0
+    padding: 0;
+    text-align: justify; /* alignement du texte */
+
   }
 
 
@@ -23,6 +25,6 @@
     font-size: 0.8em;
     font-style: italic;
     text-align: left;
-    
+
   }
 }
